--- a/web04/index.html
+++ b/web04/index.html
@@ -146,6 +146,8 @@
                         </li>
                         <li>
                             <a href="sub08.html" class="sin">고객센터</a>
+                            <a href="sub09.html" class="sin">회원가입</a>
+                            <a href="sub10.html" class="sin">문의</a>
                         </li>
                         <li class="op_btn">
                             <button class="lst">
